Element with `overflow: scroll` does not correctly account for the right margin of its child to determine the scrollable area https://bugs.webkit.org/show_bug.cgi?id=285754 <rdar://problem/142695395>

Reviewed by Antti Koivisto.

This change aligns overflow behavior (on block containers) with Chrome and Firefox.

https://drafts.csswg.org/css-overflow/#scrollable

"The UA may additionally include the margin areas of other boxes for which the box establishes a containing block; however, the conditions under which such margin areas are included is undefined in this level."

Both Chrome and Firefox include margin.

FAIL -> PASS
  imported/w3c/web-platform-tests/scroll-animations/css/view-timeline-inset-animation.html

Updated geometry dump with new scrollWidth value (matches Chrome and Firefox)
  tables/mozilla/bugs/bug83786.html
  compositing/scrolling/async-overflow-scrolling/overlapped-overlay-scrollbar-nested.html
  compositing/tiling/perspective-on-scroller-tile-coverage.html

Updated test expectation: now inline axis matches block axis (both include margin).
  imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-090.html

Updated geometry dump, while I was not able to test it with Chrome/Firefox, it looks like now inline axis matches block axis
scrollingcoordinator/scrolling-tree/absolute-in-nested-sc-scrollers.html

FAIL -> FAIL
imported/w3c/web-platform-tests/css/css-anchor-position/anchor-scroll-position-try-001.html

* LayoutTests/fast/overflow/block-scroll-overflow-with-margin-inline-end-expected.txt: Added.
* LayoutTests/fast/overflow/block-scroll-overflow-with-margin-inline-end.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::shouldMarginInlineEndContributeToScrollableOverflow):
(WebCore::RenderBox::computeLogicalWidth const):
(WebCore::RenderBox::layoutOverflowRectForPropagation const):

Canonical link: https://commits.webkit.org/290207@main